Fixed spacing, bg color, centering, and button styles

--- a/styles.css
+++ b/styles.css
@@ -11,18 +11,22 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: hsl(221, 100%, 96%);
+    background-color: white;
 }
 
 .card {
-    width: 650px;
+    width: 700px;
+    height: 490px;
     box-shadow: 10px 5px 20px hsla(0, 0%, 0%, 20%);
     border-radius: 15px;
     background-color: white;
 }
 
 .result {
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    align-items: center;
     background-image: linear-gradient(hsla(252, 100%, 67%, 1), hsla(241, 81%, 54%, 1));
     color: hsl(0, 0%, 85%);
     width: 50%;
@@ -33,56 +37,57 @@ body {
     display: flex;
     flex-direction: column;
     padding: 1.5rem;
-    gap: 1rem;
+    gap: 2rem;
     background-color: white;
     width: 50%;
+    height: 100%;
     border-radius: 15px;
     font-weight: 500;
 }
 
+.summary h3 {
+    padding-top: 4%
+}
+
 .container {
     display: flex;
-    flex-direction: row;
+    height: 100%;
 }
 
 .your-result {
     font-size: 1.3rem;
-    padding: 8% 0;
+    padding: 10% 0 10% 0;
     font-weight: 700;
 }
 
 h1 {
-    font-size: 3.5rem;
-    padding: 15% 0 0 0;
+    font-size: 4.5rem;
+    padding: 20% 0 0 0;
     color: white;
-    margin: 0;
 }
 
 .score {
-    border-radius: 50%;
-    height: 140px;
-    margin: 0 27%;
+    border-radius: 100%;
+    width: 200px;
+    height: 200px;
     background: linear-gradient(hsla(256, 72%, 46%, 1), hsla(241, 72%, 46%, 0));
-    align-self: center;
 }
 
 .great {
     font-size: 1.7rem;
-    padding: 5% 0;
+    padding: 10% 0 0 0;
     color: hsl(0, 0%, 95%);
 }
 
 .average {
     color: hsl(0, 0%, 80%);
-    padding: 0% 20%;
-    font-weight: 500;
-    font-size: .9rem;
+    padding: 6% 18%;
 }
 
 .rows {
     display: flex;
     flex-direction: column;
-    gap: 0.8rem;
+    gap: 1.3rem;
 }
 
 .row {
@@ -139,20 +144,20 @@ h1 {
     background-color: hsla(234, 85%, 45%, 0.2);
 }
 
-btn {
+.btn {
     background-color: hsl(224, 30%, 27%);
+    font-size: 1rem;
     color: white;
     text-align: center;
     border-radius: 25px;
-    align-self: center;
     width: 100%;
-    padding: 0.8rem 0.5rem;
-    transition-duration: 0.4s;
+    padding: 1rem 0.5rem;
+    border: none;
+    cursor: pointer;
 }
 
-btn:hover {
-    background-image: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
-    color: white;
+.btn:hover {
+    background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
 }
 
 
@@ -160,11 +165,15 @@ btn:hover {
 
 .card, .summary, .result {
     width: 100%;
+    height: 100%;
 }
 
 .container {
     flex-direction: column;
 }
 
+footer {
+    display: none;
+}
 }
 
